# mambajs

./: .eslintignore  .gitignore  .prettierignore  README.md  environment.yml  lerna.json  package.json
.github/: copilot-instructions.md
.github/workflows/: main.yml
picomamba/: core.cpp
picomamba/includes/: picomamba_core.hpp
python/: pyproject.toml
python/mambajs/: _version.py  cli.py
scripts/: build.py  build_wheels.py
src/: helper.ts  index.ts  parser.ts  solver.ts  solverpip.ts
src/conda-packages-solver/: core-wasm.ts  core.d.ts  index.ts  types.ts
src/dynload/: dynload.js
tests/: helpers.ts  runner.js  test-solver.ts  test_cli.py  tsconfig.json
tests/tests/: test-pip-solver.ts
unittests/: runner.js
unittests/tests/conda/: test-solver.ts
unittests/tests/mixed/: test-create-linux.ts  test-create.ts  test-solver.ts
unittests/tests/parser/: test-parse-bare.ts  test-parse-install.ts  test-parse-list.ts
unittests/tests/pip/: test-error-handling.ts  test-process-requirement.ts  test-solver.ts
