[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mambajs"
version = "0.1.0"
description = "mambajs CLI"
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.license]
file = "LICENSE"

[project.scripts]
mambajs = "mambajs.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
mambajs = ["bin/*"]
